--- a/questions.html
+++ b/questions.html
@@ -35,11 +35,14 @@ var questions = {
 count = function(subjects) {
 	// returns a hash object of statement number : number of entitites in array
 	var totalTopics = Object.keys(subjects).length;
-	var cnt = {};
+	var cnt = [];
+	//var itr = 0;
 	//cnt['total'] = 0;
 	forEachIn(subjects, function(k,v){
+		var obj = {};
 		l=v.length;
-		cnt[k] = l;
+		obj[k] = l;
+		cnt.push(obj);
 		//cnt['total']+=l;
 	});
 	return cnt;
@@ -48,23 +51,27 @@ count = function(subjects) {
 evenSpread = function(count){
 // determine whether every statement array in questions is even or not
 // this function could be bundled into count object
-	console.log("within EvenSpread "+typeof count);
-	var isEven = false;
-	var total = 0;
-	forEachIn(count, function(k,v){total+=v;});
-	var mean = Math.ceil(total/(Object.keys(count).length));
-	console.log("total = "+total+" mean = "+mean);
 
-	forEachIn(count, function(k,v){
-		if(v<mean){
-			console.log("should be seeing this if lower "+v);
-			isEven = false;
-			mean = v;
-		} else if (v===mean) {
-			console.log("wtf?"+v);
-			isEven = true;
-		}
-	});
+// count object revised into array of objects, below commented out until efficacy establish
+isEven = false;
+	// console.log("within EvenSpread "+typeof count);
+	// var isEven = false;
+	// var total = 0;
+	// forEachIn(count, function(k,v){total+=v;});
+	// var mean = Math.ceil(total/(Object.keys(count).length));
+	// console.log("total = "+total+" mean = "+mean);
+
+	// forEachIn(count, function(k,v){
+	// 	if(v<mean){
+	// 		console.log("should be seeing this if lower "+v);
+	// 		isEven = false;
+	// 		mean = v;
+	// 	} else if (v===mean) {
+	// 		console.log("wtf?"+v);
+	// 		isEven = true;
+	// 	}
+	// });
+
 	return isEven;
 }
 // somewhere between above and below needs to be the edge case of No Statements Left!
@@ -75,9 +82,19 @@ topicPool = function(count){
 		console.log("no need to prioritise!");
 	} else {
 		// sorting algo
+		/*
+		for i = 1 up to i< numOfElements, i++ {
+			keyelement = elementAt(i);
+			pos = i; //position of the key element
+			while pos > 0 and elementAt(pos-1) > keyelement {
+				elementAt(pos) = elementAt(pos–1);
+				pos = pos -1;
+			} //end while loop
+			elementAt(pos) = keyelement;
+		}
+		 */
 	}
 }
-
 
 console.log("goodbye");
 
@@ -89,68 +106,6 @@ console.log(num);
 console.log(Object.keys(questions).length);
 console.log(evenSpread(num));
 topicPool(num);
-// checking number checking
-//forEach(Object.keys(questions), function(a){console.log(isNaN(a));});
-
-// questions.prototype.count = function(first_argument) {
-// 	console.log(this.keys);
-// };
-
-/*
-Interface..
-remove(int index){
-	//deletes an element from an array while returning that element
-	https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/splice
-}
-get(int index){
-	// returns value of an index from an array while preserving that elements place in the array
-}
-
-topicCounts( topicArray ){
-
-// returns true if all arrays have even counts, false if not, and some Game Over parameter when all the questions have been exhausted
-	array.length;
-	https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/every
-	if(allTopicArrays.count.equal) {return true;}
-	else if (!allTopicArrays.count.equal) {return function chosen5();}
-	else if (!allTopicArrays.count == 0) {return gameover=true}
-}
-chosen5( topicArray ){
-	// possible that the entire JSON object array could be sorted in place? https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/sort
-// determines the first 5 'topic' arrays, returns their index
-// so this is a search algorithm, from ??? class
-}
-grab5 ( [ arrayIndexes as args ] ){
-https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/forEach
-// remove 1 randomly chosen element for each statement array passed to the function
-// basically a deQueue operation, but returns an array? returns the formatted divs?
-// does the append in situ? passes an array to a seperate append function
-	var thisRound = [];
-	var rR = ; // randRange:. need to count the length of each array, and return the lowest ones length here
-	forEach(args as i) {
-		parArray = ALL_QUESTIONS[i];
-		forEachIn(parArray, function (key, val) { thisRound.push(remove(val[rR])) }); 
-		// to test this need to see if key val arrays can be accessed in such a manner
-	}
-}
-
-grabNext5( [ arrayIndexes as args ] ) {
-	for (args)
-}
-
-
-
- */
-
-// alternative / likely deprecated grab5 logic
-	/*forEach(args as i) {
-		forEachIn(key, val) {
-		var = remove(ALL_QUESTIONS[i].val[rR]);
-		// so this could be problematic because of scope
-		// might be able to avail of bind, and the remove methods defined earlier
-		thisRound.push(q);
-	} */
-
 
 </script>
 </html>
