exploring the nuances of array.sort method

--- a/questions.html
+++ b/questions.html
@@ -81,30 +81,13 @@ topicPool = function(aList){
 	if (evenSpread(aList)) {
 		console.log("no need to prioritise!");
 	} else {
-
-		for (var i = 1; i < aList.length; i++){
-			keyElem = aList.splice(i,1); // will return a key val object
-			pos = i-1;
-			while((i >= 0) && (aList.get(i).compareTo(key) > 0 )) {i--}
-				// an insert val into array method is needed!!!
-		}
-		// sorting algo
-		/* Insertion Sort: Pseudo Code
-		// An insertion sort works by separating an array into two sections, a sorted section and an unsorted section
-		// the java implementations return a reordered arrayList
-		for i = 1 up to i< numOfElements, i++ {
-			keyelement = elementAt(i);
-			pos = i; //position of the key element
-			while pos > 0 and elementAt(pos-1) > keyelement {
-				elementAt(pos) = elementAt(pos–1);
-				pos = pos -1;
-			} //end while loop
-			elementAt(pos) = keyelement;
-		}
-		 */
+		aList.sort(compareNumbers);
 	}
 }
-
+function compareNumbers(a, b) {
+	console.log(a+" - "+b); // returns object Object
+  	return a - b;
+}
 console.log("goodbye");
 
 
@@ -112,9 +95,15 @@ console.log("object questions = "+ typeof questions);
 console.log("invoking Object.keys on object questions, returns :."+typeof Object.keys(questions));
 var num = count(questions);
 console.log(num);
-console.log(Object.keys(questions).length);
+console.log(num[0][0]);
+forEachIn(num, function(k,v){
+	console.log("key = "+k+" val = "+v);
+	console.log(v[k]);
+});
+//console.log(Object.keys(questions).length);
 console.log(evenSpread(num));
-topicPool(num);
+console.log(topicPool(num));
+console.log(topicPool([1,2,4,7]));
 
 </script>
 </html>
