--- a/questions.html
+++ b/questions.html
@@ -23,15 +23,16 @@ var questions = {
 	2: ['dublin', 'london', 'new york', 'brighton', 'glasgow', 'galway','cork','kildare','maynooth', 'goldsmiths'],
 	3 : ['ronaldo','messi','suarez','pele','andy murray','roy mcelroy','barack obama','sepp blater','david cameron','tony blair'],
 	4: ['glastonbury', 'world cup', 'wimbledon', 'election', 'wedding', 'holiday', 'baptism', 'christening','funeral', 'finale'],
-	5: ['m','n','o','p','q','r','s','t','u','v','w','x','y','z'],
+	5: ['we3', 'gravitys rainbow', 'chaos', 'ubiq','sandman','invisibles','transmetropolitan','watchmen','lord of the rings','2666'],
 	6: ['refrigerator', 'a.i.', 'neon', 'vinyl', 'tv', 'radio', 'telegraph', 'telephone', 'film', 'engine'],
 	7: ['beef', 'noodles', 'pizza', 'rice', 'pasta', 'potatoes', 'chips', 'fries', 'tortilla', 'nachos'],
 	8: ['youtube','gmail','internet','twitter','facebook','flickr','linkedin','tumblr','yahoo','pornhub'],
-	9: ['range-rover', 'toyota','nissan','suzuki','volvo','volkswagen','mini','bmw','ford','mazda'],
+	9: ['range-rover', 'toyota','nissan','suzuki','volvo','volkswagen','mini','bmw','ford','mazda']
 	// to test sorting algorithm, there follows some deliberately diminished arrays
-	10: ['just the one'],
-	11: ['a','b','c','d','e','f','g','h','i','j','k','l'],
-	12: ['we3', 'gravitys rainbow', 'chaos', 'ubiq','sandman','invisibles','transmetropolitan','watchmen','lord of the rings','2666']
+	// 10: ['just the one'],
+	// 11: ['a','b','c','d','e','f','g','h','i','j','k','l'],
+	// 12: ['m','n','o','p','q','r','s','t','u','v','w','x','y','z'],
+	// 13: ['Lorem', 'ipsum', 'dolor', 'sit', 'amet', 'audire', 'forensibus', 'ut', 'his', 'cum']
 	/*[N]topic: [statements[0]...statements[N]] */
 };
 count = function(subjects) {
@@ -45,7 +46,7 @@ count = function(subjects) {
 		l=v.length;
 		//obj[k] = l;
 		obj.contents = l;
-		obj.ref = parseInt(k);
+		obj.ref = parseInt(k); // this toInt explication might be unnecessary, given how Object keys functioned in testadt
 		cnt.push(obj);
 		//cnt['total']+=l;
 	});
@@ -79,41 +80,52 @@ isEven = false;
 	return isEven;
 }
 // somewhere between above and below needs to be the edge case of No Statements Left!
-topicPool = function(aList){
-	// this function returns the statement arrays which have the most elements remaining
+sortDesc = function(aList){
+	// returns an array of objects, sorted in priority of which object has the most statements remaining
+	// objects = {
+	// 	contents:
+	// 	ref: 
+	// }
 	console.log("within TopicPool "+typeof aList);
 	if (evenSpread(aList)) {
 		console.log("no need to prioritise!");
 	} else {
-		//nuOrder = aList.sort(compareNumbers);
 		nuOrder = aList.sort(function(a,b){return a.contents - b.contents});
 	}
-	return nuOrder.reverse();
+	return nuOrder.reverse(); // we are interested in the highest counts, so the reverse method is requisite
 }
-function compareNumbers(a, b) {
-	// console.log(a+" - "+b); // returns object Object
- //  	console.log(a.c+" - "+b.c);
-  	return a.contents - b.contents;
-}
+
+function chooseFive(topic, object) {
+
+		var genObj = {};
+		for (var c = 0; c < topic.length; c++){
+			var l = (object[topic[c]].length)-1;
+			// fetch the length of the array from which a random element is to be chosen
+			genObj[topic[c]] = Math.floor((Math.random() * l));
+		}
+		return genObj;
+};
+
+function presentStatements(nuArray,microObject, object) {
+	forEachIn(microObject, function(k,v){
+		nuArray.push(object[k][v]);
+	});
+	return(nuArray);
+};
+
+function remove(microObject, object) {
+	forEachIn(microObject, function(k,v){
+		object[k].splice(v, 1);
+	});
+};
+
 console.log("goodbye");
 
-
-console.log("object questions = "+ typeof questions);
-console.log("invoking Object.keys on object questions, returns :."+typeof Object.keys(questions));
 var num = count(questions);
-console.log(num);
-console.log(num[0][0]);
-forEachIn(num, function(k,v){
-	console.log("key = "+k+" val = "+v);
-	console.log("val[key] = "+v[k]);
-});
-//console.log(Object.keys(questions).length);
-console.log(evenSpread(num));
-//console.log(topicPool(num));
-var topFive = topicPool(num).slice(0,5);
+var topFive = sortDesc(num).slice(0,5);
 console.log(topFive);
 
 forEach(topFive, function(a){console.log(a.ref);});
-forEach([2,8,4,1,6],function(a){console.log(a);});
+
 </script>
 </html>
