--- a/helloworld_1_broken.html
+++ b/helloworld_1_broken.html
@@ -10,13 +10,14 @@
 		  console.log($( '#test' ));
 		});
 
-			$(document).ready(function() {
-				var memlist = $( "#list" );
-				var members = [ "John", "Steve", "Ben", "Damon", "Ian" ];
-				$.each(members,function( index, value ){
-				memlist.append($( "<li>" + value + "</li>" ));
-			});
-		});
+		// 	$(document).ready(function() {
+		// 		var memlist = $( "#list" );
+		// 		var members = [ "John", "Steve", "Ben", "Damon", "Ian" ];
+		// 		members=$.map(members, function(n){ return(n.toUpperCase());});
+		// 		$.each(members,function( index, value ){
+		// 		memlist.append($( "<li>" + value + "</li>" ));
+		// 	});
+		// });
 
 		</script>
 		<style type="text/css">
@@ -32,10 +33,10 @@
 		<div id="test">
 			Yo
 		</div>
-		<br>
+		<!-- <br>
 		<h3> Members of my Group are </h3>
 		<ol id="list">
-		</ol>
+		</ol> -->
 	</body>
 
 </html>
